implemented all functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "sht4x.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES driver i2c_bus)
+                    REQUIRES driver esp_timer i2c_bus)
